<resources>
    <string name="app_name" translatable="false">Hello</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="str" translatable="false">Happy Birthday!</string>
    <string name="from" translatable="false">your tom</string>
    <string name="btn_label" translatable="false">Button</string>
    <string name="hint_txt" translatable="false">Input your name</string>
    <string name="label_add1" translatable="false">+1 point</string>
    <string name="label_add2" translatable="false">+2 points</string>
    <string name="label_add3" translatable="false">+3 point</string>
    <string name="btn_reset_label" translatable="false">Reset</string>
    <string name="textView" translatable="false">温度转换器</string>
    <string name="editText" translatable="false" />
    <string name="hint_show" translatable="false">输入摄氏度</string>
    <string name="button_1" translatable="false">转换为华氏温度</string>
    <string name="textView2" translatable="false">华氏温度</string>
    <string name="show" translatable="false">温度转换器</string>
    <string name="hint_inp" translatable="false">请输入摄氏温度</string>
    <string name="result" translatable="false"></string>
    <string name="btn_dollar_label" translatable="false">Dollar</string>
    <string name="btn_euro_label" translatable="false">Euro</string>
    <string name="btn_won_label" translatable="false">Won</string>
    <string name="rmb_hint" translatable="false">Input RMB</string>
    <string name="btn_opencfg_label" translatable="false">Config</string>
    <string name="btn_save_label" translatable="false">Save</string>
    <string name="menu_set_label" translatable="false" />
    <string name="label_open_list" translatable="false">OpenList</string>
    <string name="key_hint">请输入关键字</string>
    <string name="Button">查询</string>

</resources>
