<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sedActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="65dp"
        android:onClick="btnReset"
        android:text="@string/btn_reset_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="407dp"
        android:layout_height="423dp"
        android:layout_marginBottom="152dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="TeamA"
            android:textSize="25dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="0"

            android:textSize="65dp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="14dp"
            android:onClick="btnAdd3"
            android:text="@string/label_add3" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="14dp"
            android:onClick="btnAdd2"
            android:text="@string/label_add2" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginBottom="14dp"
            android:onClick="btnAdd1"
            android:text="@string/label_add1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>